buttons for colors on mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -115,11 +115,9 @@ input{
     border: 2px solid grey;
 }
 .Mcolors{
-    width:1.2em;
     border-radius: 0.3em;
     margin-top: 1%;
     margin-bottom: 1%;
-    font-size: 1em;
     border: 2px solid grey;
 }
 
